--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,14 @@
 @import "tailwindcss";
 
+.my-btn {
+    background-color: var(--my-button-bg-color);
+}
+
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+    --background: #ffffff;
+    --foreground: #171717;
+
+    --my-button-bg-color: blue;
 }
 
 @theme inline {
@@ -14,8 +20,9 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+      --background: #ffffff;
+      --foreground: #171717;
+      --my-button-bg-color: red;
   }
 }
 
